--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -2,5 +2,11 @@
   name = Michael Wang
   email = mwwpublic@gmail.com
 
+[sendemail]
+	smtpEncryption = tls
+	smtpServer = smtp.gmail.com
+	smtpUser = mwwpublic@gmail.com
+	smtpServerPort = 587
+
 [alias]
   lol = log --graph --decorate --oneline
