--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,5 @@
 # Configs below from http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+set -g mouse on
 
 # split panes using | and -
 bind | split-window -h
