--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -16,6 +16,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+set -g allow-rename off
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
