--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -16,6 +16,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+bind e set-window-option synchronize-panes
+
 set -g allow-rename off
 
 # List of plugins
