add line ending

--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -4,6 +4,8 @@
 [core]
 	filemode = false
 	autocrlf = false
+	eol = lf
+	safecrlf = true
 	editor = /usr/local/bin/vim
 	pager = diff-so-fancy | less --tabs=2 -RFX # https://github.com/so-fancy/diff-so-fancy
 	excludesfile = ~/.gitignore_global
