--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -16,6 +16,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# clear pane
+bind -n C-k send-keys -R \; clear-history
+
 bind e set-window-option synchronize-panes
 
 set -g allow-rename off
