add mac only check

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -23,9 +23,11 @@ bind e set-window-option synchronize-panes
 
 set -g allow-rename off
 
-# fix Sierra copy/paste
 set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set -g default-terminal "tmux-256color"
+
+
+if-shell '[ "$(uname)" == "Darwin" ]' 'set -g default-command "reattach-to-user-namespace -l ${SHELL}"'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
