--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -1,5 +1,6 @@
 # Configs below from http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 set -g mouse on
+set -g mouse-utf8 off
 
 # split panes using | and -
 bind | split-window -h
