add vim and 24 bit colors

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -24,7 +24,8 @@ bind e set-window-option synchronize-panes
 set -g allow-rename off
 
 set -g default-shell $SHELL
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-24:Tc"
 
 
 if-shell '[ "$(uname)" == "Darwin" ]' 'set -g default-command "reattach-to-user-namespace -l ${SHELL}"'
