--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -27,6 +27,10 @@ set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm:Tc"
 
+# Enable powerline
+run-shell "powerline-daemon -q"
+source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
+
 
 if-shell '[ "$(uname)" == "Darwin" ]' 'set -g default-command "reattach-to-user-namespace -l ${SHELL}"'
 
