--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -25,7 +25,7 @@ set -g allow-rename off
 
 set -g default-shell $SHELL
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Enable powerline
 run-shell "powerline-daemon -q"
