--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -1,5 +1,16 @@
 # Configs below from http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 set -g mouse on
+set -g utf8 on
+set -g history-limit 50000
+set -g display-time 4000
+set -g status-interval 5
+set -g status-keys emacs
+set -g focus-events on
+setw -g aggressive-resize on
+
+# For vim
+set -s escape-time 0
+
 
 # split panes using | and -
 bind | split-window -h
@@ -9,6 +20,10 @@ unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
+
+# switch windows quickly
+bind -n C-p previous-window
+bind -n C-n next-window
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -36,7 +51,6 @@ if-shell '[ "$(uname)" == "Darwin" ]' 'set -g default-command "reattach-to-user-
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
