add restart pane

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -33,6 +33,9 @@ bind -n M-Down select-pane -D
 # clear pane
 bind -n C-k send-keys -R \; clear-history
 
+# restart pane
+bind k respawn-pane -k
+
 bind e set-window-option synchronize-panes
 
 set -g allow-rename off
