--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -13,7 +13,8 @@
 [alias]
 	gds = diff --staged
 	co = checkout
-  lol = log --graph --decorate --oneline
+    s = status
+    lol = log --graph --decorate --oneline
 	prune = fetch --prune
 	undo = reset --soft HEAD^
 	stash-all = stash save --include-untracked
