better clear button to preserve movement in terminal

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -31,7 +31,7 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # clear pane
-bind -n C-k send-keys -R \; clear-history
+bind -n C-l send-keys "C-u"\; send-keys "clear"\; send-keys "Enter"
 
 # restart pane
 bind k respawn-pane -k
