--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -1,3 +1,3 @@
 [include]
-	path = ~/.gitconfig.common
-	path = ~/.gitconfig.local
+	path = ~/.config/git/.gitconfig.common
+	path = ~/.config/git/.gitconfig.local
