--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -1,3 +1,8 @@
 [include]
 	path = ~/.config/git/.gitconfig.common
 	path = ~/.config/git/.gitconfig.local
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
